<?xml version="1.0" encoding="utf-8"?><!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="keyboard_name">Jokul.id</string>

    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Sample Soft Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Sample Soft Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>
    <string name="app_name">Jokul.id</string>
    <string name="title_activity_maps">Select Place</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Mursit Affandi</string>
    <string name="nav_header_link">mursitaffandi@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_tab_pending">Pending</string>
    <string name="label_tab_paid">Paid</string>
    <string name="label_tab_shipped">Shipped</string>
    <string name="navtittle_statustransaction">Status Transaction</string>
    <string name="navtittle_shippment">Shippment Fee</string>
    <string name="navtittle_transactionreport">Transaction Report</string>
    <string name="navtittle_customers">Customers</string>
    <string name="navtittle_transactionachieve">Transaction Achieve</string>
    <string name="navtittle_gratis">Gratis</string>
    <string name="navtittle_settings">Settings</string>
    <string name="navtittle_help">Help</string>
    <string name="cdt_invoice">Make Invoice</string>
    <string name="cdt_cekongkir">Shippment Fee</string>
    <string name="cdt_autotext">Autotext</string>
    <string name="cdt_pending">Pendings</string>
    <string name="cdt_dashboard">Dashboard</string>
    <string name="title_activity_create_transaction">CreateTransactionActivity</string>
    <string name="title_activity_detail_transaction">Detail Transaction</string>
    <string name="label_tab_done">Done</string>
    <string name="label_tab_cancel">Cancel</string>
    <string name="incdt_ongkir_title">Shippment Fee</string>
    <string name="btn_subcdt_shippmentfee_action">Count Shippment Fee</string>
    <string name="title_subcdt_toolbar_createinvoice">Create Invoice</string>
    <string name="title_subcdt_toolbar_countshippmentfee">Count Shippment Fee</string>
    <string name="title_subcdt_toolbar_autotext">Auto Text</string>
    <string name="title_subcdt_toolbar_pending">Pending</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="label_main_setting_detailshop">Detail Shop</string>
    <string name="label_main_setting_detailuser">Detail user</string>
    <string name="label_main_setting_payment">Payments</string>
    <string name="label_main_setting_tempalte_afterpaid">Template After Pay</string>
    <string name="label_main_setting_tempalte_remaindtopay">Template Reminder To Pay</string>
    <string name="label_main_setting_tempalte_autotext">Auto-Texts</string>
    <string name="label_main_setting_tempalte_sendresi">Template Send Resi</string>
    <string name="label_main_setting_shippment_origin">Shippment Origin Address</string>
    <string name="label_main_setting_shippment_companyservice">Shippment Company Service</string>
    <string name="label_main_setting_shippment_weigth">Shippment Default Weight</string>
    <string name="label_main_setting_dailyreminder">Schedule Daily Reminder</string>
    <string name="label_main_setting_logout">Logout</string>
    <string name="title_activity_template">Template Activity</string>
    <string name="label_preview_template">Preview</string>
    <string name="title_activity_auto_text">AutoTextActivity</string>
    <string name="tv_label_add_transaction_item">Item Purchase</string>
    <string name="label_button_add_transaction">Add Transaction</string>
    <string name="btn_subcdt_shippmentfee_copy">Copy To Clipboard</string>
    <string name="label_autocomplate">Subdistrict</string>
    <string name="title_activity_detail_shop">DetailShopActivity</string>
    <string name="title_activity_detail_user">DetailUserActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_default_shippment_origin">DefaultShippmentOriginActivity</string>
    <string name="title_activity_shippment_companyserice">ShippmentCompanysericeActivity</string>
    <string name="title_activity_default_shippment_weight">DefaultShippmentWeightActivity</string>
    <string name="title_activity_schedule_dailyreminder">ScheduleDailyreminderActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="frg_report">There\'s No Report For This Application</string>
    <string name="frg_gratis">There\'s No Gratis For This Application</string>
    <string name="frg_help">Mailto Developer</string>
    <string name="frg_help_anyquestion">Any Question?</string>
    <string name="frg_help_app_version">0.1.3</string>
    <string name="dialog_title_chagekeyboard">Jokul.id Keyboard</string>
    <string name="dialog_question_chagekeyboard">Ganti keyboard dengan Jokul.id sekarang?</string>
    <string name="dialog_positive_chagekeyboard">Iya</string>
    <string name="dialog_negative_chagekeyboard">Nanti</string>
    <string name="login_button_register">Create New Account</string>
    <string name="message_set_daily_reminder_on">Daily Pending Transaction Reminder ON</string>
    <string name="message_set_daily_reminder_off">Daily Pending Transaction Reminder OFF</string>
    <string name="text_body_notif_daily_reminder">There %1$d some Pending Transaction</string>
    <string name="label_scheduler_reminder_pending">Setting Daily Pending Reminder</string>
    <string name="key_notif_daily">setting_daily_reminder_pendingtansaction</string>
    <string name="label_notif_daily_summary">Set Your Notification Pending Transaction So we can Remain you for ask cutomer to pay</string>
    <string name="action_notification">Reminder Setting</string>
    <string name="key_notif_daily_time">key notif time</string>
    <string name="label_scheduler_reminder_pending_time">Daily Reminder Scheduled at</string>
    <string name="label_add_autotext">Add Autotext</string>
    <string name="label_add_autotext_content">Content</string>
    <string name="label_add_autotext_title">Shortcut</string>
    <string name="paymnet_account_number">Account Number</string>
    <string name="paymnet_account_name">Account Name</string>
    <string name="hint_defaultweight_weight">Weight In Gram</string>
    <string name="tag_available_template">Available Tag Template is </string>
    <string name="hint_shop_name">Shop Name</string>
    <string name="hint_shop_nohp">Shop Phone Number</string>
    <string name="hint_shop_url">Shop Website</string>
    <string name="label_shop_detail">Detail Shop</string>
    <string name="label_detail_user">Detail User</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_user_email">User Email</string>
    <string name="hint_user_password">User Password</string>
    <string name="label_button_sendresi">Send Resi</string>
    <string name="label_shippmentcompany">Company Of Shippment</string>
    <string name="sendresi_number">Tracking Number</string>
    <string name="title_dialog_sendresi">Send Shippment Tracking</string>
    <string name="toolbar_detailtr_sendinvoice">Send Invoice</string>
    <string name="toolbar_detailtr_changestatus">Change Status To</string>
    <string name="toolbar_detailtr_changestatus_pending">Pending</string>
    <string name="toolbar_detailtr_changestatus_paid">Paid</string>
    <string name="toolbar_detailtr_changestatus_shipped">Shipped</string>
    <string name="toolbar_detailtr_changestatus_done">Done</string>
    <string name="toolbar_detailtr_changestatus_cancel">Cancel</string>
    <string name="label_menu_search">Search Transaction</string>
    <string name="label_button_remaindtopay">Remain Customer To Pay</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_search">Search Transaction</string>
    <string name="field_empty">Field must not empty</string>
    <string name="field_autocomplate_empty">must select item from autocomplate list</string>
    <string name="regiter_name">Full Name</string>
    <string name="register_email">Valid Email</string>
    <string name="register_toko_name">Shop Name</string>
    <string name="register_toko_hohp">Shop Phone Number</string>
    <string name="register_toko_url">Shop Website (optional)</string>
    <string name="register_password">Password</string>
    <string name="register_button_submit">Register</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
</resources>
