<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inspiraspace.jokulid.subactivities.DetailShopActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp"
        android:id="@+id/textInputLayout3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etd_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_shop_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout3"
        android:layout_marginTop="18dp"
        android:id="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_shop_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_shop_nohp"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout4"
        android:layout_marginTop="24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_shop_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_shop_url"
            android:inputType="text|textUri" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_shop_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Save" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/label_shop_detail" />
</RelativeLayout>
