<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inspiraspace.jokulid.subactivities.DetailAutoTextActivity">

    <TextView
        android:id="@+id/tv_addautotext_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/label_add_autotext_title" />

    <EditText
        android:id="@+id/edt_addautotext_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_addautotext_content"
        android:layout_below="@+id/tv_addautotext_label_title"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_addautotext_label_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_addautotext_label_title"
        android:layout_below="@+id/edt_addautotext_title"
        android:layout_marginTop="38dp"
        android:text="@string/label_add_autotext_content" />

    <EditText
        android:id="@+id/edt_addautotext_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_addautotext_label_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_addautotext_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_addautotext_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/label_add_autotext" />
</RelativeLayout>
